# meowtrascale

./: .gitignore
fuzzers/io/: Makefile  generate_io.py
fuzzers/rclk/: Makefile  run.tcl
fuzzers/slice/: carry.py  lut_ff.py  lut_init.py  lutram.py  sitepips.py
meowtra/: CMakeLists.txt
meowtra/src/: correlate.cc  fuzztools.cc  main.cc  tools.h  unpack.cc
meowtra/src/bit/: bitstream.cc  bitstream.h  feature.cc  feature.h  specimen.cc  specimen.h  split_sites.cc  split_sites.h  tile.cc  tile.h  tile_key.h
meowtra/src/core/: chunk.h  cmdline.cc  cmdline.h  constids.h  constids.inc  context.cc  context.h  database.cc  database.h  datafile.cc  datafile.h  devices.cc  hashlib.h  idstring.cc  idstring.h  log.cc  log.h  nodegraph.cc  nodegraph.h  preface.cc  preface.h  rng.h  sso_array.h
meowtra_util/: device_io.py  gen_design.py  parse_design.py  tile_types.py  tilegrid.py
meowtra_util/features/: io_features.py  logic_features.py  route_features.py
meowtra_util/tcl/: dump_clk_resources.tcl  dump_design.tcl  fuzz_site_pips.tcl  seed_device.tcl
settings/: xczu7ev.sh
util/: make_cols.py  parse_design.py  tile_types.py  tilegrid.py
util/features/: logic_features.py  route_features.py
util/tcl/: dump_clk_resources.tcl  dump_design.tcl  seed_device.tcl
